# meetingbox-cpp

./: .gitignore  CMakeLists.txt  draw.hpp  install.sh  main.cpp  vcpkg.json
Graphics/: draw.cpp
audio/: CMakeLists.txt  Meeting-Box_en_mac_v2_2_0.ppn
audio/include/audio/: audio.hpp
audio/src/: audio.cpp
events/: CMakeLists.txt
events/include/events/: event_queue.hpp  events.hpp
events/src/: event_queue.cpp
graphics/: CMakeLists.txt  a.txt
graphics/include/: draw.hpp  graphics.hpp
graphics/include/graphics/: draw.hpp  graphics.hpp  renderer.hpp
graphics/include/graphics/rpi/: pixel_mapper.hpp
graphics/src/: draw.cpp  draw_rpi.cpp  graphics.cpp
graphics/src/rpi/: draw.cpp  renderer.cpp
include/processes/: hotword_detected.hpp  process.hpp  process_factory.hpp  process_manager.hpp  screensaver.hpp  screensaver_process.hpp  timer.hpp  timer_process.hpp
include/utils/: interrupt_timer.hpp
media/: CMakeLists.txt
media/include/audio/: audio.hpp
media/include/graphics/rpi/: pixel_mapper.hpp
media/src/audio/: audio.cpp
media/src/audio/hotword_models/: Meeting-Box_en_raspberry-pi_v2_2_0.ppn
media/src/graphics/: graphics.cpp  renderer.cpp
media/src/graphics/rpi/: renderer.cpp
src/: main.cpp
src/graphics/common/: graphics.cpp  graphics.hpp
src/processes/: hotword_detected.cpp  process_manager.cpp  screensaver.cpp  screensaver_process.cpp  timer.cpp  timer_process.cpp
src/utils/: interrupt_timer.cpp
testGraphics/: draw.cpp
